p2/confs/app2.yml
apiVersion: v1
kind: Service
metadata:
  name: app-two
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: app-two

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-two
spec:
  selector:
    matchLabels:
      app: app-two
  replicas: 3
  template:
    metadata:
      labels:
        app: app-two
    spec:
      containers:
      - name: nginx
        image: nginxdemos/hello
        ports:
        - containerPort: 80
